# datahub

./: .aikido  .betterleaks.toml  .codecov.yml  .commitlintrc.yml  .cursorignore  .dockerignore  .drone.yml  .ecr-repository-policy.json  .eslintrc.js  .gitattributes  .gitignore  .licenserc-markdown.yaml  .licenserc.yaml  .pre-commit-config.yaml  .tool-versions  .travis.yml  1  404.html  ACKNOWLEDGEMENTS.md  AGENTS.md  Bubble Sort.txt  CASSANDRA.md  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  CNAME  CODEOWNERS  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Consumer_Producer.java  DOCS_SITE_MIGRATION_PLAN.md  DataHubEmitterExample.java  Dockerfile  FILES_ENDPOINT_README.md  INVESTIGATION_SUMMARY.md  LICENSE  LICENSE.md  MAINTAINERS.md  MetadataChangeProposalWrapper_Refactoring_Summary.md  (+76 more)
datahub-actions/: .gitignore  README.md  build.gradle  build_and_restart.sh  cloudpickle.py  executor.yaml  gradle.lockfile  pyproject.toml  run_ingest.sh  setup.cfg  setup.py
datahub-actions/datahub-actions/: README.md  build.gradle
datahub-actions/docker/: README.md  actions.env  docker-compose.yaml
datahub-actions/docs/: action_doc_template.md  concepts.md  event_template.md  transformer_doc_template.md
datahub-actions/examples/: executor.yaml  hello_world.yaml  hello_world_datahub_cloud.yaml  metadata_change_sync.yaml  snowflake_tag_propagation.yaml
datahub-actions/scripts/: install_deps.sh  release.sh
datahub-actions/smoke-test/: build.gradle  inject_actions_env_file.py  pyproject.toml  requirements.txt  run-quickstart.sh  smoke.sh
datahub-actions/tests/: conftest.py
datahub-cloud-router/: .gitignore  CLAUDE.md  MANIFEST.in  README.md  app.py  build.gradle  oauth-state-example.js  pyproject.toml  requirements-dev.txt  requirements.txt
datahub-cloud-router/scripts/: sync.sh
datahub-cloud-router/tests/: README_MYSQL_TESTS.md  __init__.py  conftest.py  mysql_check.py  test_additional_security_coverage.py  test_admin_api_authentication.py  test_app_configuration.py  test_cli.py  test_core.py  test_database_interface_compliance.py  test_db_inmemory.py  test_db_interface.py  test_db_mysql.py  test_db_sqlite.py  test_models.py  test_security_manager_enhancements.py  test_server.py  test_teams_webhook_validation.py
datahub-executor/: .gitignore  CLAUDE.md  README.md  VENV_FIX_README.md  build.gradle  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-local.in  requirements-slim.txt  requirements.txt  setup.cfg
datahub-executor/scripts/: assertions_ui.py  copy-scripts.sh  dev.sh  fix_compiled_extensions.sh  lockfile-check.sh  lockfile.sh  shared_config.py  smoke-test-cleanup.sh  smoke-test-helper.py  sync.sh
datahub-executor/stubs/: README.md
datahub-executor/tests/: test_packaging.py
datahub-integrations-service/: .cursorrules  .gitignore  CLAUDE.md  README.md  REFACTOR_SUMMARY.md  build.gradle  env.example  failed_install.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-local.in  requirements.txt  setup.cfg  success_install.txt
datahub-integrations-service/.claude/: settings.json
datahub-integrations-service/docs/: AGENT_INFRASTRUCTURE_DESIGN.md  authentication.md  langgraph-migration-plan.md  mcp-syncing.md
datahub-integrations-service/examples/: doc_propagation_action.yaml  hello_world.yaml  record_it.yaml
datahub-integrations-service/scripts/: ai_terms.py  check_teams_config.py  check_user_notification_settings.py  connect_and_start.sh  copy_mcp_server.py  generate_dbt_sync_config.py  generate_openapi_spec.py  generate_teams_app_package.py  lockfile-check.sh  lockfile.sh  mcp_tester.py  operate_action_pipeline.py  provision_action_doc_propagation.py  provision_action_pipeline.py  share_upload_config.py  slack_config.py  slack_download_config.py  slack_manual_tests.py  slack_socket_mode.py  slack_upload_config.py  sync.sh  test_dbt_locator.py
datahub-integrations-service/tests/: conftest.py  test_connections_graphql.py  test_dbt_sync.py  test_dispatch.py  test_dist.py  test_packaging.py  test_server.py  test_telemetry.py
datahub-monitors-service/: .gitignore  README.md  build.gradle  pyproject.toml
datahub-monitors-service/scripts/: dev.sh
datahub-monitors-service/tests/: test_graph.py  test_types.py
k3d/: AGENT_RULES.md  README.md  dh  k3d-config.yaml  optimize-resources.py  pyproject.toml
k3d/tests/: conftest.py  test_cli.py  test_cluster.py  test_config.py  test_deploy.py  test_helm.py  test_images.py  test_infra.py  (+5 more)
metadata-ingestion/: .dockerignore  .gitignore  =63.0.0  CHANGELOG  CLAUDE.md  Dockerfile  KAFKA_CONNECT_LINEAGE.md  README.md  adding-source.md  as-a-library.md  baseline.txt  build-constraints.txt  build.gradle  cli-ingestion.md  client_id.txt  config.json  constraints.txt  datahub-skills.md  datahub_force_pure_python_sqlglot.pth  datahub_setproctitle_patch.pth  dbt_cloud.dhub.yml  debug_filter_test.py  demo_add_owner.py  developing.md  doris_mces.json  dremio_mces.json  events_1.json  events_2.json  events_orig.json  feature.txt  glue_mces.json  integrations.md  junit.quick.xml  kafka-recipe.yaml  ldap_etl.py  lookml_events_debug.json  mce.json  mce_cli.py  microstrategy_mces.json  mssql_mces.json  (+20 more)
semantic-search-docs/: ARCHITECTURE.md  CONFIGURATION.md  README.md  _embedding_cache.py  _embedding_utils.py  _litellm_embeddings.py  backfill_document_embeddings.py  demo_document_semantic_search.py  embedding_utils.py  ingest_sample_documents.py  pyproject.toml  sample_documents.json  test_document_semantic_search.py
smoke-test/: .gitignore  =0.1.10  AUTHENTICATION_TEST_README.md  CLAUDE.MD  README.md  build.gradle  build.gradle.orig  conftest.py  cypress-dev.sh  cypress.sh  env_gen.sh  flaky-tests.txt  junit.smoke.xml  pyproject.toml  pytest-durations.json  pytest.ini  pytest_test_weights.json  pytests-durations.json  requirements-release-test.txt  requirements.txt  run-quickstart.sh  sample_bq_data.json  secrets-env-vars.sh  set-cypress-creds.sh  set-test-env-vars.sh  smoke-dev.sh  smoke.gms.env  smoke.sh  test_authentication_e2e.py  test_data_quality.py  test_e2e.py  test_rapid.py  test_system_info.py  utils.py
(+54951 files in other folders)
