[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "acryl-datahub-executor"
version = "1!0.0.0.dev0"
description = ""
authors = [
  { name="Acryl Data", email="eng@acryl.io" },
]
requires-python = "==3.10.*"

dependencies = [
  # 1.3.0: Pydantic v2 was introduced in 1.2.0.10 and later RCs fixed in OSS some missing code from /metadata-ingestion SaaS
  "acryl-datahub[base,snowflake,bigquery,redshift,s3,unity-catalog]>=1.3.0",
  "acryl-datahub-actions>=1.3.0",

  "fastapi>=0.100.0",  # FastAPI 0.100+ supports pydantic v2
  "uvicorn[standard]>=0.23.2",
  "loguru==0.7.2",
  "apscheduler @ git+https://github.com/acryldata/apscheduler-fork.git@ak--crontab-fix",
  "pydantic>=2.4.0",
  "snowflake-connector-python>2.8.2",
  "pytz==2024.1",
  "croniter==1.3.15",
  "redshift-connector>=2.1.5",
  "types-croniter==1.4.0.1",
  "tenacity==8.5.0",
  "sentry-sdk==2.33.2",
  "oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f535001ba568b239b8797465536759c742a3",
  "celery[redis,sqs]==5.4.0",
  "kombu==5.4.0",              # Note: 5.4.1 silently breaks
  "watchdog==3.0.0",
  "acryl-executor==0.2.11",
  "pycurl==7.45.3",
  "psutil>=7.0.0",
  "pandas>=1.2.0",
  "numpy==1.26.4",
  "prophet==1.1.5",
  "scikit-learn>=1.2.2",
  "joblib >= 1.3.2",
  "h11 >= 0.16", # Older versions h11 vulnerable to CVE-2025-43859.
  "azure-identity==1.21.0",
  "aws-msk-iam-sasl-signer-python==1.0.2",
  "debugpy", # Enables remote debugging. Used in dev env
]

[project.optional-dependencies]
dev = [
  # Dev tools
  "streamlit",
  "streamlit-ext",
  "plotly",
  # Lint/test dependencies
  "ruff==0.9.6",
  "pytest",
  "mypy",
  "pytest-cov",
  "pytest-asyncio",
  "types-setuptools",
  "types-cachetools",
  "types-requests",
  "types-PyYAML",
  "faker",
  "types-pytz",
  "celery-types",
  "types-psutil",
  "scipy-stubs",
  "pandas-stubs",
  "joblib-stubs",
  "types-tqdm",
  "botocore-types",
]

[tool.uv.pip]
python-version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
	".git",
	"venv",
	"__pycache__",
]

[tool.ruff.lint.isort]
section-order = ["future", "patch", "standard-library", "third-party", "first-party", "local-folder"]
sections = { "patch" = ["datahub.utilities._markupsafe_compat", "datahub.sql_parsing._sqlglot_patch"] }
combine-as-imports = true

[tool.ruff.lint]
extend-select = [
	"ASYNC",
	"B",      # flake8-bugbear
	"E",      # pycodestyle errors
	"F",      # pyflakes
	"G010",   # logging.warn -> logging.warning
	"I",      # isort
	"INP001",
	"TID",    # flake8-tidy-imports
	"RUF100", # unused-noqa
]
extend-ignore = [
	'E501', # Ignore line length, since black handles that.
	'D203', # Ignore 1 blank line required before class docstring.
  'B017', # TODO There are warnings in executor code. These need cleanup. Then this can be removed
  'B904', # TODO There are warnings in executor code. These need cleanup. Then this can be removed
]

[tool.pyright]
extraPaths = ['tests']
