[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "acryl-datahub-executor"
version = "1!0.0.0.dev0"
description = ""
authors = [
  { name="Acryl Data", email="eng@acryl.io" },
]
requires-python = ">=3.11,<3.12"

dependencies = [
  # 1.3.0: Pydantic v2 was introduced in 1.2.0.10 and later RCs fixed in OSS some missing code from /metadata-ingestion SaaS
  "acryl-datahub[base,snowflake,bigquery,redshift,s3,unity-catalog]>=1.3.1.7",
  "acryl-datahub-actions>=1.3.1.7",

  "fastapi>=0.100.0",  # FastAPI 0.100+ supports pydantic v2
  "uvicorn[standard]>=0.23.2",
  "loguru==0.7.2",
  "apscheduler @ git+https://github.com/acryldata/apscheduler-fork.git@ak--crontab-fix",
  "pydantic>=2.4.0",
  "snowflake-connector-python>2.8.2",
  "pytz==2024.1",
  "croniter==1.3.15",
  "redshift-connector>=2.1.5",
  "databricks-sql-connector>=2.8.0,<3.0.0",  # Required for databricks connections (slim builds exclude unity-catalog)
  "types-croniter==1.4.0.1",
  "tenacity==8.5.0",
  "sentry-sdk==2.33.2",
  "oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f535001ba568b239b8797465536759c742a3",
  "celery[redis,sqs]==5.4.0",
  "kombu==5.4.0",              # Note: 5.4.1 silently breaks
  "watchdog[watchmedo]==3.0.0",
  "acryl-executor==0.3.4",
  "pycurl==7.45.3",
  "psutil>=5.9.0",
  "jinja2==3.1.4",
  "pandas>=1.2.0",
  "numpy==1.26.4",
  "scikit-learn>=1.2.2",
  "joblib >= 1.3.2",
  "h11 >= 0.16", # Older versions h11 vulnerable to CVE-2025-43859.
  "azure-identity==1.21.0",
  "aws-msk-iam-sasl-signer-python==1.0.2",
  # For JSON logging support
  "python-json-logger>=4.0.0",
  # NOTE: observe-models is intentionally NOT in core deps - it pulls in prophet (~300MB+)
  # Use the 'observe' extra for full ML monitoring support
]

[project.optional-dependencies]
observe = [
  # Smart assertions / ML-based monitoring dependencies
  # These are heavy (~300MB+) and excluded from slim builds
  "prophet==1.3.0",
  "cmdstanpy==1.3.0",
  "observe-models==0.1.0.dev55",
  "xgboost>=2.0.0,<4.0.0",
]
dev = [
  # Dev/debugging tools
  "debugpy",  # Enables remote debugging
  "streamlit",
  "streamlit-ext",
  "plotly",
  "duckdb>=0.9.0",  # Efficient parquet querying for time series explorer
  "boto3>=1.28.0",  # S3 access for time series explorer
  # Include observe dependencies for dev (prophet + observe-models with all extras)
  "prophet==1.3.0",
  "cmdstanpy==1.3.0",
  "observe-models==0.1.0.dev55",
  # Lint/test dependencies
  "ruff==0.9.6",
  "pytest",
  "mypy",
  "pytest-cov",
  "pytest-asyncio",
  "types-setuptools",
  "types-cachetools",
  "types-requests",
  "types-PyYAML",
  "faker",
  "types-pytz",
  "celery-types",
  "types-psutil",
  "scipy-stubs",
  "pandas-stubs",
  "joblib-stubs",
  "types-tqdm",
  "botocore-types",
]

[tool.uv.pip]
python-version = "3.11"
# Allow finding packages from multiple indexes when using UV_EXTRA_INDEX_URL
# This is needed when the same package exists on both PyPI and Cloudsmith
index-strategy = "unsafe-best-match"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
	".git",
	"venv",
	"__pycache__",
]

[tool.ruff.lint.isort]
section-order = ["future", "patch", "standard-library", "third-party", "first-party", "local-folder"]
sections = { "patch" = ["datahub.utilities._markupsafe_compat", "datahub.sql_parsing._sqlglot_patch"] }
combine-as-imports = true

[tool.ruff.lint]
extend-select = [
	"ASYNC",
	"B",      # flake8-bugbear
	"E",      # pycodestyle errors
	"F",      # pyflakes
	"G010",   # logging.warn -> logging.warning
	"I",      # isort
	"INP001",
	"TID",    # flake8-tidy-imports
	"RUF100", # unused-noqa
]
extend-ignore = [
	'E501', # Ignore line length, since black handles that.
	'D203', # Ignore 1 blank line required before class docstring.
  'B017', # TODO There are warnings in executor code. These need cleanup. Then this can be removed
  'B904', # TODO There are warnings in executor code. These need cleanup. Then this can be removed
]

[tool.ruff.lint.per-file-ignores]
# Allow relative imports from parent modules in the streamlit_explorer app
"scripts/streamlit_explorer/**/*.py" = ["TID252"]

[tool.pyright]
extraPaths = ['tests']

[tool.coverage.run]
# Exclude non-operational code from coverage
omit = [
    "scripts/streamlit_explorer/*",
    "scripts/streamlit_explorer/**/*",
    "scripts/assertions_ui.py",
]

[tool.coverage.report]
# Exclude non-operational code from coverage reports
omit = [
    "scripts/streamlit_explorer/*",
    "scripts/streamlit_explorer/**/*",
    "scripts/assertions_ui.py",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
