[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "acryl-datahub-monitors"
version = "0.0.0.dev0"
description = ""
authors = ["Acryl Data <eng@acryl.io>"]
packages = [{include = "datahub_monitors", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12" 
acryl-datahub = { path = "../metadata-ingestion", develop = true, extras = ["snowflake", "redshift", "s3", "bigquery"] }
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
loguru = "^0.7.0"
slack-bolt = "^1.18.0"
apscheduler = "^3.10.1"
pydantic = "^1.10.7"
snowflake-connector-python = "<2.8.2 || >2.8.2,<3.0.0"
cronitor = "^4.6.0"
pytz = "^2023.3"
croniter = "1.3.15"
redshift-connector = "^2.0.910"
types-croniter = "^1.3.2.9"
tenacity = "^8.2.2"
sentry-sdk = "^1.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.263"
pytest = "^7.3.1"
mypy = "^1.2.0"
pytest-cov = "^4.0.0"
types-setuptools = "^67.7.0.0"
isort = "^5.12.0"
types-pytz = "^2023.3.0.0"

[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tmp
'''
include = '\.pyi?$'
target-version = ['py310']

[tool.isort]
profile = 'black'

[tool.ruff]
ignore = [
	'E501', # Ignore line length, since black handles that.
	'D203', # Ignore 1 blank line required before class docstring.
]

[tool.pyright]
extraPaths = ['tests']