[project]
name = "dh"
version = "0.1.0"
description = "CLI for managing DataHub on k3d with multi-worktree support"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
dh = "dh.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dh"]
