[project]
name = "semantic-search-poc"
version = "0.1.0"
description = "POC for comparing embedding text generation approaches in DataHub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opensearch-py>=2.4.0",
    "elasticsearch>=8.11.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typing-extensions>=4.9.0",
    "numpy>=1.24.0",
    "boto3>=1.34.0",
    "litellm>=1.75.5.post1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
bedrock = [
    "boto3>=1.34.0",
    "numpy>=1.24.0",  # For vector operations
]
cohere = [
    "cohere>=5.0.0",
    "numpy>=1.24.0",
]
litellm = [
    "litellm>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
