[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "smoke-test"
version = "0.0.0"
description = ""
authors = [
    { name="Acryl Data", email="eng@acryl.io" },
]
requires-python = "==3.11.*"

[tool.ruff]
# Enable ruff format
target-version = "py311"
line-length = 88
extend-exclude = ["tmp", "venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["datahub"]
extra-standard-library = ["__future__", "datahub.utilities._markupsafe_compat", "datahub.sql_parsing._sqlglot_patch"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = false
force-wrap-aliases = false
split-on-trailing-comma = false
order-by-type = true
relative-imports-order = "closest-to-furthest"
force-single-line = false
single-line-exclusions = ["typing"]
length-sort = false
from-first = false
required-imports = []
classes = ["typing"]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "G010", # logging.warn -> logging.warning
    "I",    # isort
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501",  # Line length violations (handled by formatter)
    "B904",  # exception with `raise ... from err` or `raise ... from None` to distinguish
    "TID252",# Prefer absolute imports over relative imports
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = "^(venv/|build/|dist/)"
ignore_missing_imports = true
namespace_packages = false
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_configs = true
# eventually we'd like to enable these
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-s -v --junit-xml=test-results/junit.smoke.xml"
junit_suite_name = "smoke-test-pytest"
markers = [
    "read_only: marks tests as read only (deselect with '-m \"not read_only\"')",
    "no_cypress_suite1: main smoke tests, suite 1",
    "test_run_cypress: run cypress tests",
]
filterwarnings = [
    # Ignore some warnings that come from dependencies.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:The new datahub SDK:datahub.errors.ExperimentalWarning",
    # We should not be unexpectedly seeing API tracing warnings.
    "error::datahub.errors.APITracingWarning",
]
# Logging configuration - formats test reports without interfering with CLI tests
log_level = "INFO"
log_format = "%(asctime)s - %(name)s - %(funcName)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
# Note: log_cli is intentionally NOT configured to avoid interfering with
# click.testing.CliRunner output capture in CLI command tests
