[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=63.0.0", "setuptools_scm"]

[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tmp
'''
include = '\.pyi?$'

[tool.isort]
indent = '    '
profile = 'black'
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.pyright]
extraPaths = ['tests']